--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,8 @@ services:
     env_file:
       - ./.env
   web:
-    build: .
+    # build: .
+    image: geedeega/yamdb:v1.11
     restart: unless-stopped # always
     volumes:
       - static_value:/code/static/
