--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,7 @@ services:
     env_file:
       - ./.env
   web:
-    # build: .
-    image: geedeega/yamdb:v1.11
+    image: geedeega/yamdb:v1.11 #     # build: .
     restart: unless-stopped # always
     volumes:
       - static_value:/code/static/
