--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ django-nine==0.2.4
 # djangorestframework==3.12.4
 # djangorestframework-simplejwt==4.7.2
 Faker==8.1.2
-flake8==3.9.2
+# flake8==3.9.2
 idna==2.8
 importlib-metadata==1.5.0
 iniconfig==1.1.1
@@ -25,7 +25,7 @@ more-itertools==8.2.0
 mypy==0.812
 mypy-extensions==0.4.3
 packaging==20.1
-pep8-naming==0.11.1
+# pep8-naming==0.11.1
 Pillow==8.0.0
 pluggy==0.13.1
 # psycopg2-binary==2.8.6
@@ -65,3 +65,10 @@ psycopg2-binary==2.8.6
 PyJWT==1.7.1
 pytz==2020.1
 sqlparse==0.3.1 
+
+
+flake8
+pep8-naming
+flake8-broken-line
+flake8-return
+flake8-isort
