--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
         uses: docker/build-push-action@v2 # Выполняет push образа в DockerHub 
         with:
           push: true
-          tags: geedeega/infra_actions:latest
+          tags: geedeega/yamdb:latest
 
   deploy:
       runs-on: ubuntu-latest
@@ -63,7 +63,7 @@ jobs:
             key: ${{ secrets.SSH_KEY }}
             passphrase: ${{ secrets.PASSPHRASE }}
             script: |
-              sudo docker pull geedeega/infra_actions:latest
+              sudo docker pull geedeega/yamdb:latest
               sudo docker-compose stop
               sudo docker-compose rm web
               # Создаст файл для переменных окружения
