--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./.env
   web:
-    image: geedeega/yamdb:v1.11 #     # build: .
+    image: geedeega/yamdb:latest #     # build: .
     restart: unless-stopped # always
     volumes:
       - static_value:/code/static/
