--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name 127.0.0.1;
+    server_name 84.201.175.214; # 127.0.0.1;
 
     location /static/ {
         root /var/html/;
