--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,8 @@ services:
     env_file:
       - ./.env
   web:
-    image: geedeega/yamdb:latest #     # build: .
+    # image: geedeega/yamdb:latest
+    build: .
     restart: unless-stopped # always
     volumes:
       - static_value:/code/static/
@@ -24,6 +25,8 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
+  # sertbot:
+  #   image: certbot/certbot
 
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
