--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 
       uses: actions/setup-python@v2
-      strategy:
-      # with:
+      with:
         matrix:
           python-version: ["3.8", "3.9"]
 
