--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
     env_file:
       - ./.env
   web:
-    # image: geedeega/yamdb:latest
-    build: .
+    image: geedeega/yamdb:latest
+    # build: .
     restart: unless-stopped # always
     volumes:
       - static_value:/code/static/
