--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 
       uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+      strategy:
+        matrix:
+      # with:
+          python-version: 3.8
 
     - name: Install dependencies
       run: | 
