--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 
       uses: actions/setup-python@v2
-      matrix:
-        python-version: ["3.8", "3.9"]
+      strategy:
+        matrix:
+          python-version: ["3.8", "3.9"]
 
     - name: Install dependencies
       run: | 
