--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,13 +6,14 @@ jobs:
   
   tests:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 
-      uses: actions/setup-python@v2
-      with:
-        matrix:
-          python-version: ["3.8", "3.9"]
+    strategy:
+      steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 
+        uses: actions/setup-python@v2
+        with:
+          matrix:
+            python-version: ["3.8", "3.9"]
 
     - name: Install dependencies
       run: | 
