--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           matrix:
-            python-version: ["3.8", "3.9"]
+            python-version: [3.8, 3.9]
     - name: Install dependencies
       run: | 
         # обновление pip
