--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
         steps:
         - uses: actions/checkout@v2
         - name: Set up Python 
           uses: actions/setup-python@v2
-          # with:
-          
+          with:
+            python-versions: [3.8, 3.9]
     - name: Install dependencies
       run: | 
         # обновление pip
