--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-versions: ["3.7", "3.8"]
+        python-versions: ["3.8"]
 
     steps:
     - uses: actions/checkout@v2
