--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Set up Python 
       uses: actions/setup-python@v2
         matrix:
-          python-versions: ["3.7", "3.8"]
+          python-version: ["3.7", "3.8"]
     - name: Install dependencies
       run: | 
         # обновление pip
