--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ jobs:
   
   tests:
     runs-on: ubuntu-latest
-      strategy:
-        matrix:
-          python-version: ["3.7", "3.8"]
+    strategy:
+      matrix:
+        python-version: ["3.8",]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 
