--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up Python 
       uses: actions/setup-python@v2
+      strategy:
       matrix:
         with:
           python-version: ["3.8",]
