--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     - name: Set up Python 
       uses: actions/setup-python@v2
       with:
+      strategy:
         matrix:
           python-version: ["3.7", "3.8"]
     - name: Install dependencies
