--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
       with:
-        python-version: [3.7, 3.8]
+        python-version: 3.8
     - name: Install dependencies
       run: | 
         # обновление pip
