--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
       uses: actions/setup-python@v2
     strategy:
       matrix:
-        python-version: 3.8
+        - python-version: 3.8
+        - python-version: 3.7
     - name: Install dependencies
       run: | 
         # обновление pip
