--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
       uses: actions/setup-python@v2
     strategy:
       matrix:
+      with:
       - python-version: 3.8
       - python-version: 3.7
     - name: Install dependencies
