--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
     - name: Set up Python 
       uses: actions/setup-python@v2
       with:
+      strategy:
+        matrix:
       - python-version: 3.8
       - python-version: 3.7
     - name: Install dependencies
