--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ asgiref==3.2.10
 Django==3.0.5
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.3.0
-# gunicorn==20.0.4
+gunicorn==20.0.4
 psycopg2-binary==2.8.6
 PyJWT==1.7.1
 pytz==2020.1
