--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,11 @@ jobs:
         # cd infra_project/
         # запустить написанные разработчиком тесты
         pytest #python manage.py test
-  
+
+on:
+  push:
+  - master
+
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
