--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -6,13 +6,16 @@ jobs:
   
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8", "3.9"]
+    
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
-
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: | 
         # обновление pip
@@ -49,7 +52,7 @@ jobs:
         uses: docker/build-push-action@v2 # Выполняет push образа в DockerHub 
         with:
           push: true
-          tags: geedeega/infra_actions:latest
+          tags: geedeega/yamdb:latest
 
   deploy:
       runs-on: ubuntu-latest
@@ -63,7 +66,7 @@ jobs:
             key: ${{ secrets.SSH_KEY }}
             passphrase: ${{ secrets.PASSPHRASE }}
             script: |
-              sudo docker pull geedeega/infra_actions:latest
+              sudo docker pull geedeega/yamdb:latest
               sudo docker-compose stop
               sudo docker-compose rm web
               # Создаст файл для переменных окружения
