For third review

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,8 @@ jobs:
 
 on:
   push:
-  - master
+    branches:
+      - master
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
