For third review

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,9 @@ jobs:
         # запустить написанные разработчиком тесты
         pytest #python manage.py test
 
-on: push: branches: - master
+on: [push]:
+  branches:
+  - master
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
