--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: yamdb_final workflow
 
-on: [push]
+on:
+  push:
+    branches:
+    - master
 
 jobs:
   
@@ -34,10 +37,6 @@ jobs:
         # запустить написанные разработчиком тесты
         pytest #python manage.py test
 
-
-
-  branches:
-    - master
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
