--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     - master
 
 jobs:
-  
+
   tests:
     runs-on: ubuntu-latest
     strategy:
@@ -39,6 +39,7 @@ jobs:
 
 
   build_and_push_to_docker_hub:
+    if: ${{ github.ref == 'main/master' }}
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
@@ -59,6 +60,7 @@ jobs:
           tags: geedeega/yamdb:latest
 
   deploy:
+      if: ${{ github.ref == 'main/master' }}
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
       steps:
