--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
 
 
   build_and_push_to_docker_hub:
-    if: ${{ github.ref == 'main/master' }}
+    if: ${{ github.ref == 'master' }}
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
@@ -60,7 +60,6 @@ jobs:
           tags: geedeega/yamdb:latest
 
   deploy:
-      if: ${{ github.ref == 'main/master' }}
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
       steps:
