--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,21 +20,15 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: | 
-        # обновление pip
+      run: |
         python -m pip install --upgrade pip 
-        # установка flake8 и его плагинов
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        # установка зависимостей
         pip install -r requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
-        # запуск проверки проекта по flake8
         python -m flake8
-        # перейти в папку, содержащую manage.py - <корневая_папка>/<папка_проекта>/manage.py
-        # cd infra_project/
-        # запустить написанные разработчиком тесты
+        # cd api_yamdb / # manage.py в корневой папке
         pytest #python manage.py test
 
 
@@ -95,4 +89,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно  выполнен!
+        message: ${{ github.workflow }} успешно задеплоен!
