--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -33,7 +33,7 @@ jobs:
 
 
   build_and_push_to_docker_hub:
-    if: ${{ github.ref == 'main' }}
+    if: github.ref == 'master'
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
