--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -33,7 +33,7 @@ jobs:
 
 
   build_and_push_to_docker_hub:
-    if: github.ref == 'master'
+    if: github.ref == 'refs/heads/master'
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
@@ -90,3 +90,15 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: ${{ github.workflow }} успешно задеплоен!
+  
+  send_message_failure:
+      if: ${{ failure() }}
+      runs-on: ubuntu-latest
+      needs: deploy
+      steps:
+      - name: send failure message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: ${{ github.workflow }} workflow НЕ выполнен!
